[package]
name = "what-osm-pbf"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "http://jjcfrancis.co"
readme = "README.md"
repository = "https://github.com/jjcfrancisco/what-osm-pbf"
description = "Get the necessary osm pbf files within a bounding box."

[dependencies]
derive_more = { version = "1", features = ["from"] }
clap = { version="4.5.16", features = ["derive"] }
reqwest = { version="0.12.7", features = ["blocking"] }
tempfile = "3.12.0"
serde_json = "1.0.127"
geojson = "0.24.1"
geo-types = "0.7.13"
geo = "0.28.0"

[[bin]]
name = "wop"
path = "src/main.rs"

categories = ["science::geo"]

